--- a/index.html
+++ b/index.html
@@ -683,7 +683,7 @@
                 <div class="character">
                     <img src="https://i.pinimg.com/564x/3a/9b/85/3a9b85c5a9a4a8d0f8e4e4a4f4e4e4e4.jpg" alt="Helin" class="character-avatar bride-avatar">
                     <div class="character-name bride-name">Helin</div>
-                    <div class="character-desc">25 yaşında, Mimar<br>Detaylara önem verir, sanatı sever</div>
+                    <div class="character-desc">27 yaşında, Mimar<br>Detaylara önem verir, sanatı sever  xd</div>
                     
                     <div class="stats">
                         <div class="stat-label">
